# DocChecker

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: AppShell.tsx  router.tsx
frontend/src/entities/document/: model.ts
src/docchecker/: __init__.py
src/docchecker/api/: main.py
src/docchecker/checkers/: base.py  capabilities.py  engine.py  finding_context.py  font.py  header_footer.py  ooxml.py  page_setup.py  paragraph.py  paragraph_index.py  property.py  rule_dsl.py  semantic.py  semantic_checkers.py  semantic_utils.py
src/docchecker/core/: config.py
src/docchecker/domain/: document.py  enums.py  findings.py  requirements.py  rules.py  tasks.py
src/docchecker/parsing/: docx_facts.py  docx_formatting.py  docx_parser.py  docx_sections.py
src/docchecker/reports/: markdown.py
src/docchecker/services/: check_service.py  docx_validator.py  file_storage.py  requirement_parser.py  rule_compiler.py  rule_extractor.py  rule_extractor_factory.py  rule_extractor_llm.py  rule_extractor_local.py  rule_extractor_quality.py  rule_extractor_semantic.py  rule_extractor_style.py  rule_extractor_targeting.py  rule_extractor_types.py  state_store.py  task_queue.py  word_document_preparer.py
tests/: test_api_flow.py  test_config.py  test_docx_parser_and_engine.py  test_domain_models.py  test_requirement_parser.py  test_rule_extractor.py  test_state_store.py  test_task_queue.py  test_word_document_preparer.py
(+41 files in other folders)
