[project]
name = "docchecker"
version = "0.1.0"
description = "Word thesis format checker backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-docx>=1.1.2",
    "lxml>=5.3.0",
    "python-multipart>=0.0.20",
    "rq>=2.0.0",
    "redis>=5.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
docchecker-api = "docchecker.api.main:run"
docchecker-worker = "docchecker.services.task_queue:run_worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docchecker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
